# HW_M07_goit_py_web

./: README.md  config.ini  main_query.py  pyproject.toml  seeds.py
alembic/: env.py
alembic/versions/: 4188eeb2722f_init.py
database/: db.py  models.py
