[tool.poetry]
name = "myhw7"
version = "0.1.0"
description = ""
authors = ["Rishniak Valerii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
psycopg2 = "^2.9.7"
sqlalchemy = "^2.0.20"
faker = "^19.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
